Commiting Screen with displayed Event Types and Pop up for Creating new Event Types

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,4 @@
 <app-navbar *ngIf="!(isLoginPage || isRegistrationPage)"></app-navbar>
 <app-drawer-navbar *ngIf="!(isLoginPage || isRegistrationPage)"></app-drawer-navbar>
 <!-- Main content area (where login and registration will show) -->
-<router-outlet></router-outlet>
-
+<app-event-type-management></app-event-type-management>
