--- a/src/app/components/notifications/notifications.component.css
+++ b/src/app/components/notifications/notifications.component.css
@@ -1,7 +1,7 @@
 /* Notifications Sidebar */
 .notifications-sidebar {
   width: 300px;
-  background-color: #ffffff;
+  background-color: #DFD1C9;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 120px;
@@ -31,7 +31,7 @@
 .sidebar-header h2 {
   font-size: 18px;
   font-family: 'Arial', sans-serif;
-  color: #333;
+  color: #523D35;
   margin: 0;
 }
 
@@ -39,7 +39,7 @@
   font-size: 20px;
   background: none;
   border: none;
-  color: #333;
+  color: #523D35;
   cursor: pointer;
 }
 
@@ -75,6 +75,11 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.card.unread {
+  background: #e7f3ff;
+  border-left: 4px solid #523D35;
+}
+
 .card-content {
   display: flex;
   align-items: center;
@@ -97,12 +102,12 @@
   font-weight: bold;
   font-size: 14px;
   margin-bottom: 5px;
-  color: #333;
+  color: #523D35;
 }
 
 .notification-text {
   font-size: 12px;
-  color: #555;
+  color: #523D35;
 }
 
 /* Overlay Styling */
@@ -120,7 +125,7 @@
   background: none;
   border: none;
   font-size: 20px;
-  color: #333;
+  color: #523D35;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -131,5 +136,5 @@
 }
 
 .mute-button:hover i {
-  color: #555;
+  color: #523D35;
 }
