--- a/src/app/offerings/category-expansion-panel/category-expansion-panel.component.html
+++ b/src/app/offerings/category-expansion-panel/category-expansion-panel.component.html
@@ -1,9 +1,9 @@
-<mat-expansion-panel hideToggle>
+<mat-expansion-panel hideToggle #panel>
   <mat-expansion-panel-header>
     <!-- Category name as title -->
     <mat-panel-title>{{ category.name }}</mat-panel-title>
     <!-- Brief description -->
-    <mat-panel-description *ngIf="category.description">
+    <mat-panel-description *ngIf="category.description && !panel.expanded">
       {{ category.description | slice: 0:21}}
       <p *ngIf="category.description.length > 21">...</p>
     </mat-panel-description>
