--- a/src/app/offerings/add-category/add-category.component.html
+++ b/src/app/offerings/add-category/add-category.component.html
@@ -1,38 +1,54 @@
-<form (ngSubmit)="onSubmit(categoryForm)" #categoryForm="ngForm" class="mat-elevation-z1 mat-display-small">
-  <!-- Name -->
-  <mat-form-field>
-    <mat-label>Name</mat-label>
-    <!-- Maybe add validation for alphanumeric only name? -->
-    <input matInput type="text"
-           id="add-category-name"
-           name="name"
-           required
-           minlength="3"
-           maxlength="100"
-           [(ngModel)]="model.name"
-           #name="ngModel"
-    />
+<ng-container [ngSwitch]="status">
 
-    @if (name.touched && name.invalid) {
-      <mat-error *ngIf="name.errors?.['required']">Name is required</mat-error>
-      <mat-error *ngIf="name.errors?.['minlength'] as minLengthError">Name must have at least {{ minLengthError.requiredLength }} characters</mat-error>
-    }
-  </mat-form-field>
-
-  <!-- Description -->
-  <mat-form-field>
-    <mat-label>Description</mat-label>
-    <textarea matInput
-              id="add-category-description"
-              name="description"
-              maxlength="500"
-              [(ngModel)]="model.description">
-      </textarea>
-  </mat-form-field>
-
-  <!-- Actions -->
-  <div>
-    <button mat-raised-button color="primary" type="submit" [disabled]="categoryForm.invalid">Create</button>
-    <button mat-button color="secondary" type="reset">Reset</button>
+  <!-- -->
+  <div *ngSwitchCase="'created'">
+    <p>{{ successMsg }}</p>
+    <button mat-raised-button (click)="goBack()">Ok</button>
   </div>
-</form>
+
+  <div *ngSwitchCase="'error'">
+    <p>{{ errorMsg }}</p>
+    <button mat-raised-button (click)="goBack()">Ok</button>
+  </div>
+
+
+  <form *ngSwitchDefault (ngSubmit)="onSubmit(categoryForm)" #categoryForm="ngForm" class="mat-elevation-z1 mat-display-small" [class.loading]="status === 'submitted'">
+    <!-- Name -->
+    <mat-form-field>
+      <mat-label>Name</mat-label>
+      <!-- Maybe add validation for alphanumeric only name? -->
+      <input matInput type="text"
+             id="add-category-name"
+             name="name"
+             required
+             minlength="3"
+             maxlength="100"
+             [(ngModel)]="model.name"
+             #name="ngModel"
+      />
+
+      @if (name.touched && name.invalid) {
+        <mat-error *ngIf="name.errors?.['required']">Name is required</mat-error>
+        <mat-error *ngIf="name.errors?.['minlength'] as minLengthError">Name must have at least {{ minLengthError.requiredLength }} characters</mat-error>
+      }
+    </mat-form-field>
+
+    <!-- Description -->
+    <mat-form-field>
+      <mat-label>Description</mat-label>
+      <textarea matInput
+                id="add-category-description"
+                name="description"
+                maxlength="500"
+                [(ngModel)]="model.description">
+      </textarea>
+    </mat-form-field>
+
+    <!-- Actions -->
+    <div>
+      <button mat-raised-button color="primary" type="submit" [disabled]="categoryForm.invalid">Create</button>
+      <button mat-button color="secondary" type="reset">Reset</button>
+    </div>
+  </form>
+
+</ng-container>
