Extract global styles and add-category status handlers

--- a/src/app/offerings/add-category/add-category.component.html
+++ b/src/app/offerings/add-category/add-category.component.html
@@ -3,12 +3,12 @@
   <!-- -->
   <div *ngSwitchCase="'created'">
     <p>{{ successMsg }}</p>
-    <button mat-raised-button (click)="goBack()">Ok</button>
+    <button mat-raised-button [routerLink]="['/categories']">Ok</button>
   </div>
 
   <div *ngSwitchCase="'error'">
     <p>{{ errorMsg }}</p>
-    <button mat-raised-button (click)="goBack()">Ok</button>
+    <button mat-raised-button (click)="ngOnInit() // Maybe add restart method">Ok</button>
   </div>
 
 
