--- a/src/app/offerings/category-management/category-management.component.html
+++ b/src/app/offerings/category-management/category-management.component.html
@@ -19,7 +19,7 @@
       <mat-icon>close</mat-icon>
     </button>
     <!-- Outlet for create and edit forms -->
-    <router-outlet name="popup"></router-outlet>
+    <router-outlet name="popup"/>
   </div>
 </div>
 
