--- a/src/app/offerings/category-management/category-management.component.html
+++ b/src/app/offerings/category-management/category-management.component.html
@@ -8,7 +8,7 @@
   <app-category-expansion-panel *ngFor="let category of categories"
     [category]="category"
     (delete)="deleteCategory($event)"
-    (edit)="editCategory($event)">
+    (edit)="showEditCategory($event)">
   </app-category-expansion-panel>
 </mat-accordion>
 
