Commiting change in font

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Petrona:wght@400;700&display=swap');
 
 body {
+  font-family: 'Petrona', sans-serif;
   position: relative;
   background-color: #ffffff; /* Pozadina stranice */
   overflow-x: hidden;
