--- a/src/app/components/registration-eo/registration-eo.component.html
+++ b/src/app/components/registration-eo/registration-eo.component.html
@@ -48,6 +48,9 @@
                 <input id="address" type="text" placeholder="Address" />
               </div>
               <div class="form-group">
+                <input id="city" type="text" placeholder="City" />
+              </div>
+              <div class="form-group">
                 <input id="phoneNumber" type="tel" placeholder="Phone number" (input)="onPhoneInput($event)"/>
               </div>
               <div class="form-group">
