fixed filter options

--- a/src/app/components/homepage/hottest-events/hottest-events.component.css
+++ b/src/app/components/homepage/hottest-events/hottest-events.component.css
@@ -161,6 +161,11 @@
   padding: 10px; /* Manji padding */
 }
 
+small span {
+  margin-right: 5px;
+  color: #523D35;
+}
+
 .view-more-btn {
   background-color: #523D35;
   color: #fff;
