--- a/src/app/components/homepage/hottest-services/hottest-services.component.html
+++ b/src/app/components/homepage/hottest-services/hottest-services.component.html
@@ -27,8 +27,8 @@
           <div class="card-content">
             <h3>{{solution.name}}</h3>
             <p>{{solution.description}}</p>
-            <p><span  class="fas fa-tag"></span>{{solution.price}}</p>
-            <small>{{solution.location}}</small>
+            <small><span  class="fas fa-tag"></span>{{solution.price}} din</small><br>
+            <small><span class="fas fa-location-pin"></span>{{solution.location}}</small>
             <br>
             <button class="view-more-btn">View More</button>
           </div>
