--- a/src/app/components/homepage/our-events/our-events.component.html
+++ b/src/app/components/homepage/our-events/our-events.component.html
@@ -22,13 +22,17 @@
       <input type="date" id="endDate" [(ngModel)]="endDate" />
     </div>
     <div class="filter-option">
+      <label for="location">City:</label>
+      <select id="location" [(ngModel)]="location">
+        <option value="">All Cities</option>
+        <option *ngFor="let city of locations" [value]="city">{{ city }}</option>
+      </select>
+    </div>
+    <div class="filter-option">
       <label for="category">Category:</label>
       <select id="category" [(ngModel)]="category">
-        <option value="">All Categories</option>
-        <option value="Music">Music</option>
-        <option value="Art">Art</option>
-        <option value="Sports">Sports</option>
-        <option value="Education">Education</option>
+        <option value="">All categories</option>
+        <option *ngFor="let c of categories" [value]="c">{{ c }}</option>
       </select>
     </div>
     <button (click)="applyFilters()">Apply Filters</button>
