--- a/src/app/components/homepage/our-sevices/our-sevices.component.html
+++ b/src/app/components/homepage/our-sevices/our-sevices.component.html
@@ -31,11 +31,8 @@
     <div class="filter-option">
       <label for="category">Category:</label>
       <select id="category" [(ngModel)]="category">
-        <option value="">All Categories</option>
-        <option value="Music">Music</option>
-        <option value="Art">Art</option>
-        <option value="Sports">Sports</option>
-        <option value="Education">Education</option>
+        <option value="">All categories</option>
+        <option *ngFor="let c of categories" [value]="c">{{ c }}</option>
       </select>
     </div>
     <div class="filter-option">
@@ -73,7 +70,7 @@
         <p>{{ solution.description }}</p>
         <small> <span class="fas fa-map-marker-alt" ></span> {{ solution.location }} </small><br>
         <small> <span class="fas fa-cogs"></span>{{ solution.solutionType }}</small>  <br>
-        <small> <span class="fas fa-tag"></span>{{ solution.price }}</small><br>
+        <small> <span class="fas fa-tag"></span>{{ solution.price }} din</small><br>
         <br>
         <button>View More</button>
       </div>
