Commiting SPP registration

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <p>
-          You don’t have an account? <a href="/register">Register here</a>
+          You don’t have an account? <a href="/registration-spp">Register here</a>
         </p>
       </div>
     </div>
