homepage definded by users

--- a/src/app/components/home-admin/home-admin.component.html
+++ b/src/app/components/home-admin/home-admin.component.html
@@ -7,7 +7,7 @@
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
       <!-- Right profile icon -->
-        <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
+      <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
 
       <!-- Centered logo -->
       <div class="logo-container">
@@ -26,5 +26,10 @@
     </div>
   </div>
 </header>
-
-<app-drawer-navbar [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar>
+<app-hottest-events></app-hottest-events>
+<app-our-events></app-our-events>
+<div class="section-divider1"></div>
+<div class="section-divider2"></div>
+<app-hottest-services></app-hottest-services>
+<app-our-sevices></app-our-sevices>
+<app-footer></app-footer>
