homepage definded by users

--- a/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
+++ b/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
@@ -1,14 +1,14 @@
 <!-- Navigation Sidebar -->
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
-    <li>Home</li>
-    <li>User Management</li>
-    <li>Event Types</li>
+    <li>My events</li>
+    <li>Calendar</li>
     <li>Categories</li>
-    <li (click)="toggleCommentsSidebar()">Comments & Reviews</li> <!-- Izmena -->
-    <li>Reports</li>
-    <li>Notifications</li>
-    <li>Profile</li>
+    <li>Invitations</li>
+    <li>Budget planning</li>
+    <li>Favourite services/products</li>
+    <li>Messages</li>
+    <li (click)="toggleNotificationsSidebar()">Notifications </li>
     <li>Log out</li>
   </ul>
 </div>
