--- a/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
+++ b/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
@@ -1,14 +1,12 @@
 <!-- Navigation Sidebar -->
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
-    <li>Home</li>
-    <li>User Management</li>
-    <li>Event Types</li>
+    <li>My services/products</li>
+    <li>Bookings</li>
+    <li>Reviews and ratings</li>
     <li>Categories</li>
-    <li (click)="toggleCommentsSidebar()">Comments & Reviews</li> <!-- Izmena -->
-    <li>Reports</li>
-    <li>Notifications</li>
-    <li>Profile</li>
+    <li (click)="toggleNotificationsSidebar()">Notifications</li> <!-- Izmena -->
+    <li>Messages</li>
     <li>Log out</li>
   </ul>
 </div>
