--- a/src/app/components/home/home-guest/home.component.html
+++ b/src/app/components/home/home-guest/home.component.html
@@ -27,7 +27,7 @@
   </div>
 </header>
 
-<app-drawer-navbar-admin [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-admin>
+<app-drawer-navbar-guest [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-guest>
 
 <app-hottest-events></app-hottest-events>
 <app-our-events></app-our-events>
