--- a/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
+++ b/src/app/components/drawers/drawer-navbar-organizer/drawer-navbar-organizer.component.html
@@ -13,5 +13,4 @@
   </ul>
 </div>
 
-<!-- Comments Sidebar -->
-<app-admin-comments [isCommentsOpen]="isCommentsOpen"></app-admin-comments>  <!-- Prosleđivanje stanja -->
+<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
