--- a/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
+++ b/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
@@ -11,5 +11,4 @@
   </ul>
 </div>
 
-<!-- Comments Sidebar -->
-<app-admin-comments [isCommentsOpen]="isCommentsOpen"></app-admin-comments>  <!-- Prosleđivanje stanja -->
+<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
