--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -26,6 +26,8 @@
     </div>
   </div>
 </header>
+<app-drawer-navbar-admin [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-admin>
+
 <app-hottest-events></app-hottest-events>
 <app-our-events></app-our-events>
 <div class="section-divider1"></div>
