--- a/src/app/components/home/home-organizer/home-organizer.component.html
+++ b/src/app/components/home/home-organizer/home-organizer.component.html
@@ -26,6 +26,8 @@
     </div>
   </div>
 </header>
+
+<app-drawer-navbar-organizer [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-organizer>
 <app-hottest-events></app-hottest-events>
 <app-our-events></app-our-events>
 <div class="section-divider1"></div>
