Commiting Registration for Event Organizer

--- a/src/app/components/registration/registration-spp/registration-spp.component.html
+++ b/src/app/components/registration/registration-spp/registration-spp.component.html
@@ -18,7 +18,7 @@
       <div class="circle-four"></div>
 
       <div class="form-container">
-        <h2>Registration</h2>
+        <h2>Service and Product Provider Registration</h2>
 
         <div class="circle-background">
           <div class="form-card">
