--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,7 +49,7 @@
         </div>
 
         <!-- Popup Modal -->
-        <p> You don’t have an account? <a href="/registration-spp">Register here</a> </p>
+        <p> You don’t have an account? <a href="#" (click)="openModal($event)">Register here</a> </p>
 
         <!-- Modal -->
         <div
@@ -64,7 +64,6 @@
             <button id="closeModal" (click)="closeModal()">Close</button>
           </div>
         </div>
-
       </div>
     </div>
   </div>
