--- a/src/app/offerings/product-details/product-details.component.html
+++ b/src/app/offerings/product-details/product-details.component.html
@@ -28,4 +28,12 @@
       </b>
     </dd>
   </dl>
+
+  <dt>Provided by:</dt>
+  <dd>
+    <a [routerLink]="['/users', product.provider.id]">
+      <img [src]="product.provider.profileImage || 'assets/images/logo.png'" alt="{{ product.provider.name | titlecase }} profile image"/>
+    </a>
+    <span>{{ (product.provider.name | titlecase) || product.provider.email }}</span>
+  </dd>
 </article>
