Link home service/product cards with their details page

--- a/src/app/components/homepage/hottest-services/hottest-services.component.html
+++ b/src/app/components/homepage/hottest-services/hottest-services.component.html
@@ -30,7 +30,7 @@
             <small><span  class="fas fa-tag"></span>{{solution.price}} din</small><br>
             <small><span class="fas fa-location-pin"></span>{{solution.location}}</small>
             <br>
-            <button class="view-more-btn">View More</button>
+            <button class="view-more-btn" [routerLink]="['Service' === solution.solutionType ? '/services' : '/products', solution.id]">View More</button>
           </div>
         </div>
       </div>
