Commiting Edit for Event Organizers information and Password Change

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -55,8 +55,7 @@
         <div
           id="registerModal"
           class="modal"
-          [ngStyle]="{ display: showModal ? 'flex' : 'none' }"
-        >
+          [ngStyle]="{ display: showModal ? 'flex' : 'none' }">
           <div class="modal-content">
             <h2>Do you want to register as:</h2>
             <button (click)="redirectTo('/registration-eo')">Event Organizer</button>
